# pyGLAM

./: .gitignore  README.md  learn_pyglam.ipynb  pyproject.toml  readme.md  release.py  release.sh  requirements_env.txt  teste.ipynb  teste_renata.ipynb
.github/workflows/: docs.yml
docs/source/: conf.py  index.rst  pyglam.rst
pyglam/: __init__.py  glam.py
